--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/vue@next"></script>
     <script src="assets/js/vue.js"></script>
-    <title>Data Binding Problem</title>
+    <title>Event Binding Problem</title>
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/1200px-Vue.js_Logo_2.svg.png" type="image/icon type">
 </head>
 <body>
@@ -21,15 +21,19 @@
 
   <section id="assignment" class="events">
     <h2>Event Practice</h2>
+    <!--================ line================================== -->
     <div class="line"></div>
 
+    <!-- button_submit -->
     <form v-on:submit="submit">
         <button>Show Alert</button>
     </form>
-   
+    
+    <!-- first_input -->
     <input v-on:keyup="firstOutput" type="text">
     <p>Output: {{firstInput}}</p>
 
+    <!-- second_input --> 
     <input v-on:keyup.enter="secondOutput" type="text">
     <p>Output: {{secondInput}}</p>
   </section>
